# course_api_hh

./: README.md  config.py  main.py  pyproject.toml
data/: test_json_file.json  vacancy.json
src/: Abstract_Api_HH.py  Abstract_Json_Saver.py  Get_Api_HH.py  Json_operation.py  vacancies.py
tests/: conftest.py  test_get_api_hh.py  test_json_operation.py  test_vacancies.py
