[tool.poetry]
name = "course-api-hh"
version = "0.1.0"
description = ""
authors = ["Vladimir Afonin <vovan010698@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
